--- a/Topic2-1/src/main/resources/templates/Hello.html
+++ b/Topic2-1/src/main/resources/templates/Hello.html
@@ -23,6 +23,7 @@ p {
 <body>
 	<div class = "titleBox">
 		<h1 th:text = "${message}">Hello world</h1>
+		<p th:text = "${rating}">Rating ...</p>
 	</div>
 	<p>This is new paragraph</p>
 </body>
