--- a/Topic2-1/src/main/resources/templates/printFriends.html
+++ b/Topic2-1/src/main/resources/templates/printFriends.html
@@ -1,7 +1,50 @@
-<!Doctype html>
-<html>
-<body>
-<p>Friends page</p>  
-</body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
+<title>Bootstrap 4, from LayoutIt!</title>
+
+<meta name="description"
+	content="Source code generated using layoutit.com">
+<meta name="author" content="LayoutIt!">
+
+<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="css/style.css" rel="stylesheet">
+
+</head>
+<body>
+
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-md-12">
+				<h3>New Friends</h3>
+				<table class="table table-hover">
+					<thead>
+						<tr>
+							<th>ID</th>
+							<th>Name</th>
+							<th>Age</th>
+							<th>Weight</th>
+						</tr>
+					</thead>
+					<tbody >
+						<tr th:each = "p : ${people}">
+							<td th:text = "${p.id}"></td>
+							<td th:text = "${p.name}"></td>
+							<td th:text = "${p.age}"></td>
+							<td th:text = "${p.weight}"></td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+	</div>
+
+	<script src="js/jquery.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/scripts.js"></script>
+</body>
 </html>
